--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
-<head>
-  <link rel="stylesheet" href="styles.css">
-</head>
+<html>
+  <head>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
 
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-  <h1>Cloud Cafe</h1>
+  <body>
+    <h1>Cloud Cafe</h1>
 
-  <div class="content">
+    <div class="content">
+      <form id="add-cafe-form"></form>
 
-    <form id="add-cafe-form"></form>
+      <ul id="cafe-list"></ul>
+    </div>
 
-    <ul id="cafe-list"></ul>
+    <script>
+      // Your web app's Firebase configuration
+      var config = {
+        apiKey: 'AIzaSyBeMJZQWSrA-WNARRHi17iDj6i0AIxZXH0',
+        authDomain: 'firestore-ninja-tutorial.firebaseapp.com',
+        databaseURL: 'https://firestore-ninja-tutorial.firebaseio.com',
+        projectId: 'firestore-ninja-tutorial',
+        storageBucket: '',
+        messagingSenderId: '903394685158',
+        appId: '1:903394685158:web:391aefb55b10b8d1'
+      };
+      // Initialize Firebase
+      firebase.initializeApp(config);
+      const db = firebase.firestore();
+      db.settings({ timestampInSnapshots: true });
+    </script>
 
-  </div>
-
-  <script src="app.js"></script>
-</body>
-
+    <script src="app.js"></script>
+  </body>
 </html>
