--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <h1>Cloud Cafe</h1>
 
     <div class="content">
-      <form id="add-cafe-form"></form>
+      <form id="add-cafe-form">
+        <input type="text" name="name" placeholder="Cafe name" />
+        <input type="text" name="city" placeholder="Cafe city" />
+        <button>Add Cafe</button>
+      </form>
 
       <ul id="cafe-list"></ul>
     </div>
@@ -29,7 +33,6 @@
       // Initialize Firebase
       firebase.initializeApp(config);
       const db = firebase.firestore();
-      db.settings({ timestampInSnapshots: true });
     </script>
 
     <script src="app.js"></script>
